# AirQuality_Monitor

./: .clang-format  .gitmodules  LICENSE  partitions.csv  platformio.ini  readme.md
boards/: airquality_v3.json
data/: index.html  javascript.js  settings.html
docs/: AirQuality.csv
include/: AirQualityLevels.h  DeviceSetup.h  LogMacros.h  WifiProvision.h  common.h  events.h  helpers.h  pins.h
include/Tasks/: BME280.h  HTTP.h  Leds.h  Logging.h  MQTT.h  PMS5003.h  SGP41.h  SenseAir_S8.h  SensorRepository.h  Task.h  VEML7700.h
lib/Observe/: CMakeLists.txt  LICENSE  README.md
lib/Observe/.github/workflows/: install.yml  ubuntu.yml
lib/Observe/include/observe/: event.h  observer.h  value.h
lib/Observe/test/: CMakeLists.txt
lib/Observe/test/source/: event.cpp  example.cpp  value.cpp
src/: AirQualityLevels.cpp  DeviceSetup.cpp  WifiProvision.cpp  events.cpp  helpers.cpp  main.cpp
src/Tasks/: BME280.cpp  HTTP.cpp  Leds.cpp  Logging.cpp  MQTT.cpp  PMS5003.cpp  SGP41.cpp  SenseAir_S8.cpp  SensorRespository.cpp  Task.cpp  VEML7700.cpp
